public/css/style.css
@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap');

:root{
    --white: #fff;
    --black: #070707;
    --blue: #2C6B8E;
    --darkblue1: #1a3270;
    --darkblue2: #0a293a;
    --red: #9c1f1f;
    --grey: #adadad;
    --gradient: linear-gradient(0deg, #4b8db1 0%, #1a3270 100%);

}

*{
    scroll-behavior: smooth;
}

body{
    font-family: 'League Spartan', sans-serif;
    color: var(--white);
    background: var(--gradient);
    background-repeat: no-repeat;
    min-height: 100vh;
    min-width: 100vw;
    margin: 0;
    display: flex;
    flex-direction: column;
}

/* GENERAL */

    :not(.login-register-page) > main{
        margin: 0 100px;
        flex: 1;
    }

    a{
        color: var(--white);
        text-decoration: none;
    }

    a:visited{
        color: var(--white);
    }

    a:active{
        color: var(--white);
    }

    .no-underline{
        text-decoration: none;
    }

    .line{
        width: 2px;
        height: 30px;
        background-color: var(--white);
        margin: 0 2px;
    }

    .btn{
        width: fit-content;
        height: fit-content;
        padding: 10px;
        border-radius: 15px;
        text-decoration: none;
        font-size: 20px;
        border: 3px solid var(--white);
        cursor: pointer;
        transition: all 250ms ease;
    }

    .btn:hover{
        background-color: transparent;
        color: var(--white);
    }

    .add-btn{
        border: 3px solid var(--white);
        transition: all ease 250ms;
    }

    .add-btn:hover{
        background-color: var(--white);
        color: var(--darkblue1);
    }

    button{
        cursor: pointer;
    }

    details{
        border: 1px solid var(--white) !important;
        border-radius: 5px;
        padding: 10px;
    }

    summary{
        font-weight: 700;
    }

    details[open]{
        width: fit-content;
        min-width: fit-content;
    }

    .maester{
        color: var(--darkblue1);
    }

/* NAVBAR */

    nav{
        position: relative;
        display: flex;
        justify-content: space-between;
        align-items: center;
        width: 100vw;
        margin-bottom: 50px;
    }

    .nav-links{
        display: flex;
        justify-content: center;
        align-items: center;
        list-style-type: none;
    }

    .nav-link{
        margin: 0 10px;
        transition: all 300ms ease;
    }

    .nav-link a{
        text-decoration: none;
        font-size: 24px;
    }

    .nav-link:hover{
        font-weight: 600;
    }

    .nav-link a::before {
        display: block;
        content: attr(title);
        font-weight: bold;
        height: 0;
        overflow: hidden;
        visibility: hidden;
    }

    .logo{
        margin-left: 10px;
    }
    
    .logo img{
        width: 75px;
        height: fit-content;
    }

/* FOOTER */

    footer{
        bottom: 0;
        margin-top: 50px;
        padding: 20px 100px;
        background-color: #1a3270;
        display: flex;
        justify-content: space-between;
        align-items: flex-start;
        gap: 50px;
    }

    .footer-general{
        width: 40%;
    }

    .footer-lists{
        display: flex;
        justify-content: space-evenly;
        align-items: flex-start;
        gap: 50px;
    }

    .footer-follow{
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: flex-start;
    }

    .footer-follow ul{
        display: flex;
        flex-direction: row !important;
        justify-content: center;
        align-items: center;
        padding: 0;
        margin: 0;
        gap: 20px;
        font-size: 30px;
    }

    footer ul{
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        align-items: flex-start;
        padding: 0;
        margin: 0;
        gap: 10px;
    }

    footer ul li, 
    footer ul li a{
        list-style-type: none;
        color: var(--grey) !important;
    }

    footer ul li:hover,
    footer ul li a:hover{
        color: var(--white) !important;
    }

        
/* FORMS */

    .form-wrapper{
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: flex-start;
        gap: 10px;
    }

    .form{
        display: flex;
        flex-direction: column;
        width: fit-content;
        gap: 10px;
    }

    .checkbox{
        display: flex;
        flex-direction: row;
        width: fit-content;
        margin: 10px;
    }

    textarea{
        width: 100%;
        margin: 10px !important;
    }

    .submit{
        border: 3px solid var(--white);
        transition: all 250ms ease;
    }

    input:-webkit-autofill,
    input:-webkit-autofill:hover, 
    input:-webkit-autofill:focus, 
    input:-webkit-autofill:active{
        -webkit-background-clip: text;
        -webkit-text-fill-color: #ffffff;
        font-size: 18px;
        transition: background-color 5000s ease-in-out 0s;
    }

/* CONNEXION - INSCRIPTION */

    .login-register-page main{
        display: flex;
        flex-direction: column;
        justify-content: space-evenly;
        align-items: center;
    }
                                                                                                                                
    .login-register{
        backdrop-filter: blur(20px);
        color: var(--white);
        width: 50vw;
        min-width: fit-content;
        border-radius: 15px;
        padding: 30px;
        font-size: 18px;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        justify-self: center;
    }

    .login-register form{
        width: 100%;
        height: 100%;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        gap: 10px;
    }
/* ... */

